# yourtactics

./: .gitmodules  .renovaterc.json  Makefile  README.md  pyproject.toml  templates.yaml
src/yourtactics/: __init__.py  __main__.py  args.py  logging.py  main2.py  templates.py  templates_data.py
src/yourtactics/templates/.github/workflows/: ci.yml  ci.yml.j2  release.yml  release.yml.j2
src/yourtactics/templates/README/: README.md.j2
src/yourtactics/templates/cookiecutter/: cookiecutter.json.j2
src/yourtactics/templates/cookiecutter/homebrew/: cookiecutter.json.j2
src/yourtactics/templates/cookiecutter/homebrew-and-scoop/: cookiecutter.json.j2
src/yourtactics/templates/github/workflows/: ci.yml.j2  release.yml.j2
src/yourtactics/templates/gitignore/: gitignore.j2  gitignore2.j2
src/yourtactics/templates/go/: .goreleaser.yaml  Makefile.j2  Makefile2.j2  go.mod.j2  magefile.go.j2  magefile2.go.j2
src/yourtactics/templates/go/Makefile/: Makefile.j2  Makefile2.j2  Makefile3.j2  Makefile4.j2
src/yourtactics/templates/go/go.mod/: go.mod.j2  go.mod2.j2
src/yourtactics/templates/go/goreleaser/: goreleaser-base.yaml.j2  goreleaser.yaml.j2  goreleaser2.yaml.j2  goreleaser3.yaml.j2  goreleaser4.yaml.j2
src/yourtactics/templates/go/magefile/: magefile.go.j2  magefile2.go.j2  magefile3.go.j2  magefile4.go.j2
src/yourtactics/templates/go/version/: version.go.j2  version2.go.j2
src/yourtactics/templates/python/: pyproject.toml.j2
