[project]
name = "yourtactics"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Taylor Monacelli", email = "taylormonacelli@gmail.com" }
]
dependencies = [
    "jinja2==3.1.6",
    "pyyaml==6.0.3",
    "requests==2.32.5",
]
readme = "README.md"
requires-python = "==3.13.7"

[project.scripts]
yourtactics = "yourtactics:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.2.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/yourtactics"]

[tool.ruff.lint]
extend-select = ["I"]
